@@ -520,3 +520,7 @@ Thu Jun 24 19:37:22 2004                        Michael Jennings (mej)
 
 Testing commit e-mail....
 ----------------------------------------------------------------------
+Mon Jun 28 12:56:50 2004                        Michael Jennings (mej)
+
+Tag/branch/revision-related stuff should be working now.
+----------------------------------------------------------------------
